--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <li>010-2060-1335</li>
                 <li>12dohyun5@naver.com</li>
               </ul>
+              <a href="http://proximal-bridge-587.notion.site/919a4631131541019cb3a4e1c846e4e2?pvs=74" target="_blank">노션 보러가기</a>
             </div>
             <div class="side">
               <div class="license">
@@ -90,7 +91,7 @@
             <img src="./assert/web projects/eworld.png" alt="이월드" />
             <div class="background">
               <div class="Btext">
-                <a href="#">작업내용</a>
+                <a href="http://proximal-bridge-587.notion.site/6a6dea70084747998ab1f93bf65d6287?pvs=74" target="_blank">작업내용</a>
                 <br />
                 <a href="https://dh-eworld.netlify.app/" target="_blank">완성 페이지</a>
               </div>
@@ -104,7 +105,7 @@
             <img src="./assert/web projects/paikdabang.png" alt="빽다방" />
             <div class="background">
               <div class="Btext">
-                <a href="#">작업내용</a>
+                <a href="https://proximal-bridge-587.notion.site/01e59add3ef34854a862e096e323459a?pvs=74" target="_blank">작업내용</a>
                 <br />
                 <a href="https://dh-paikdabang.netlify.app" target="_blank">완성 페이지</a>
               </div>
@@ -118,7 +119,7 @@
             <img src="./assert/web projects/lottecinema.png" alt="롯데시네마" />
             <div class="background">
               <div class="Btext">
-                <a href="#">작업내용</a>
+                <a href="https://proximal-bridge-587.notion.site/689cd210ba5842ab8a9eb7d3843df5f3" target="_blank">작업내용</a>
                 <br />
                 <a href="https://dh-lottecinema.netlify.app/" target="_blank">완성 페이지</a>
               </div>
